<resources>
    <string name="app_name">E-FINANCE</string>
    <string name="titulologin">LOGIN</string>
    <string name="login">Login</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="seu_salario_atual">Seu salario atual é</string>
    <string name="atualizar_salario">Atualizar salário</string>
    <string name="adicionar_despesa">Adicionar despesa</string>
    <string name="text_view">Text View</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="salario">Salario</string>
    <string name="sair">Sair</string>
    <string name="valor_da_despesa">Valor da despesa</string>
    <string name="data_de_vencimento">Data de Vencimento</string>
    <string name="atualizar">Atualizar</string>
    <string name="valor_do_salario">Valor do salário</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="nome_da_despesa">Nome da despesa</string>
    <string name="button">Button</string>
</resources>